2005-10-20 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b21

 * Fix: New Images were not committed in b20.

 * Fix: Use correct gif, instead of non existing png in check.inc and js/toogle.js

2005-10-18 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b20

 * Change: Pimp my configwizard step 1.
	   - New Layout
	   - Changed wording
	   - Combined some test.

 * New: function galleryImage() in lib/content.php

 * Change: Added more detaied description for thumbs ratio.

 * New: Added js/toggle.js

2005-10-17 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b19

 * Change: removed function removeTags(), which was just a wrapper for strip_tags()

 * NEW: Added ratio for thumbnails (per album) and highlight (startpage).
        0   - Ratio as the original
	1/1 - Square

       -> Config version bump
 
 * New: Added "rebuild highlights" for admins. It rebuild all highlights on startpage.

 * New: Added "Paranoia" debuglevel, not useful for normal debug ;)

 * Change: reworked function getDimensions(), removed second parameter.

 * Change: create lib/album.php and lib/imageManipulation.php, moved functions from util.php.

 * New: method getHighlightRatio() in classes/Album.php

 * Change: modified method makeThumbnail() in classes/AlbumItem.php to hence thumbnail ratio.

 * New: function cropImageToRatio() in lib/imageManipulation.php

 * Change: Some css changes in config to save space.

 * Fix: Frames were broken due to wrond base url.

2005-10-11 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b18

 * Change: Added subgroups in configwizard.

2005-10-11 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b17 "Holly Release Part 1"

 * NEW: Support for albumdownload as zipfile.
   - Added new permission for zipdownload per album.
   - Tweaked albums.php, when user is allowed to download and zip is installed, 
     a little zipicon appears.
   - Same for subalbums in view_album.php
   - Added download.php. This is called when user presses icon.
     User can choose between full, or resized download.