@@ -1,3 +1,14 @@
+2005-10-20 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b22
+
+ * Change: renamed readCache() and writeCache() in stats.php and block-random.php 
+	    to more unique names, to avoid conflicts.
+
+ * Change: Change html output of block-random.php. Uses now <div> with classes instead of <center>.
+
+ * Fix: Do not send headers in initLanguage() if headers were already sent.
+
+ * Change: Display columns in view_photo_properties left/right aligned according to language direction.
+
 2005-10-20 Jens Tkotz <jens@peino.de> 1.5.2-cvs-b21
 
  * Fix: New Images were not committed in b20.
